# MATH

./: .gitignore  CMakeLists.txt  README.md  build.sh  installMATH.sh  runMATH.sh  uninstallMATH.sh
TestCase/: CMakeLists.txt
TestCase/Flann/: flann_test.cpp
TestCase/Matrix/: matrix_test.cpp  vector_test.cpp
TestCase/Util/: string_test.cpp
config/: CmakeHelper.cmake.in  MATHConfig.cmake.in  MATHConfig.h.in  MATHConfigVersion.cmake.in
examples/: CMakeLists.txt
examples/Flann/: CMakeLists.txt  flann_example.c  flann_example.cpp
examples/Matrix/: CMakeLists.txt  file_main.cpp  matrix_main.cpp  vector_main.cpp
examples/Util/: ArgPaser_main.cpp  CMakeLists.txt  file_system_main.cpp  logging_main.cpp  string_main.cpp
examples/flann/: CMakeLists.txt  flann_example.c  flann_example.cpp
examples_bin/: matrix_main
include/: .gitignore  flann.h  flann.hpp  math_define.h
include/MATH/Flann/: flann.hpp
include/MATH/Flann/algorithms/: all_indices.h  autotuned_index.h  center_chooser.h  composite_index.h  dist.h  hierarchical_clustering_index.h  kdtree_index.h  kdtree_single_index.h  kmeans_index.h  linear_index.h  lsh_index.h  nn_index.h
include/MATH/Flann/nn/: ground_truth.h  index_testing.h
include/MATH/Flann/util/: feature.h  logger.h  params.h  random.h  saving.h
include/MATH/Function/: algorithm.hpp  define.h  function.hpp
include/MATH/Matrix/: algorithm_base.h  matrix.hpp  matrix_LU.hpp  matrix_cholesky.hpp  matrix_conjugate_gradient.hpp  matrix_lu.hpp  matrix_qr.hpp  matrix_svd.hpp  special_matrix.h  vector.hpp
include/MATH/Util/: ArgParser.h  arg_parser.h  define.h  exception.h  file_system.h  string.h  system.h  tokenizer.h
include/MATH/flann/: flann.hpp
include/MATH/flann/algorithms/: all_indices.h  autotuned_index.h  center_chooser.h  composite_index.h  dist.h  hierarchical_clustering_index.h  kdtree_cuda_3d_index.h  kdtree_index.h  kdtree_single_index.h  kmeans_index.h  linear_index.h  lsh_index.h  nn_index.h
include/MATH/flann/nn/: ground_truth.h  index_testing.h
include/MATH/flann/util/: feature.h  logger.h  params.h  random.h  sampling.h  saving.h
include/MATH/flann/util/cuda/: result_set.h
include/MATH/function/: function.hpp
include/Matrix/: algorithm_base.h  define.h  matrix.h  matrix.hpp  matrix_LU.hpp  matrix_cholesky.hpp  matrix_conjugate_gradient.hpp  matrix_inverse.hpp  matrix_qr.hpp  matrix_svd.hpp  vector.hpp
include/Util/: ArgParser.h  exception.h  file_system.h  logging.h  string.h  timer.h  tokenizer.h
include/flann/: flann.h  flann.hpp
include/flann/algorithms/: all_indices.h  autotuned_index.h  composite_index.h  hierarchical_clustering_index.h  kdtree_index.h  kdtree_single_index.h  kmeans_index.h  linear_index.h  lsh_index.h  nn_index.h
include/flann/nn/: ground_truth.h  index_testing.h
include/flann/util/: feature.h  lsh_table.h  saving.h
include/function/: define.h  function.hpp
include/util/: aligned_allocator.hpp  define.h  file_system.h  logging.h  system.h
material/: README.md
src/: CMakeLists.txt
src/Flann/: CMakeLists.txt  flann_cpp.cpp
src/Function/: CMakeLists.txt  a.cpp
src/Matrix/: CMakeLists.txt  a.cpp  matrix.cpp  matrix_LU.cpp  matrix_lu.cpp
src/Optimization/: CMakeLists.txt
src/Util/: ArgParser.cpp  CMakeLists.txt  arg_parser.cpp  file_system.cpp  logging.cpp  string.cpp  system.cpp
src/flann/: CMakeLists.txt  flann.cpp  flann_cpp.cpp
src/flann/algorithms/: all_indices.h  autotuned_index.h  center_chooser.h  composite_index.h  hierarchical_clustering_index.h  kdtree_index.h  kdtree_single_index.h  kmeans_index.h  linear_index.h  lsh_index.h  nn_index.h
src/flann/nn/: ground_truth.h  index_testing.h
src/flann/util/: feature.h  sampling.h
src/function/: CMakeLists.txt
src/util/: CMakeLists.txt  file_system.cpp  logging.cpp  system.cpp
