include_directories(../include)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
MATH_ADD_TEST(MATH_FUNCTION_STRING_TEST Util/string_test.cpp)
MATH_ADD_TEST(MATH_MATRIX_TEST Matrix/matrix_test.cpp)
MATH_ADD_TEST(MATH_FLANN_TEST Flann/flann_test.cpp)
MATH_ADD_TEST(MATH_MATRIX_VECTOR_TEST Matrix/vector_test.cpp)
target_link_libraries(MATH_MATRIX_TEST ${OpenCV_LIBS})